# industry_analytics_parser

./: .gitignore  Dockerfile  pyproject.toml
notebooks/: parser.ipynb  summarizer.ipynb  summarizer_v2.ipynb
